# slot-machine

./: .gitignore  README.md  config.py  machine.py  main.py  player.py  pyproject.toml  reel.py  ui.py
