[tool.poetry]
name = "slot-machine"
version = "0.1.0"
description = ""
authors = ["Mateus De Souza <desouza.mateus1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
